--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: The Zone of UtalaZDK 
 ---
+## 欢迎来到我的频道！
+这是我的内容区域。因为我在上面写了 `layout: default`，
+GitHub 就会自动把这里的文字塞进 `_layouts/default.html` 里的 `{{ content }}` 位置。
 <!DOCTYPE html>
 <html>
 <head>
