Modify content in index.html
Updated content in the index.html file.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: default
 title: The Zone of UtalaZDK 
 ---
 ## 欢迎来到我的频道！
-这是我的内容区域。因为我在上面写了 `layout: default`，
-GitHub 就会自动把这里的文字塞进 `_layouts/default.html` 里的 `{{ content }}` 位置。
+很高兴遇见你，这是我的QQ号：351712075和B站ID：狮子王NO1
 <!DOCTYPE html>
 <html>
 <head>
