Replace Octocat image with LIMBO image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ title: The Zone of UtalaZDK
     <p>这是我的 GitHub Pages 网站。</p >
     <p>我正在学习如何使用它。</p >
     <p>Present Time:2026/January/15</p >
-    <img src="https://octodex.github.com/images/stormtroopocat.jpg" alt="GitHub Octocat" width="200">
+    <img src="{{ '/assets/images/limbo.jpg' | relative_url }}" alt="LIMBO" width="200">
 </body>
 </html>
